tests/compose_backend_fail/missing_default.stderr
error: compose_backend! requires a `default => <field>` route
  --> tests/compose_backend_fail/missing_default.rs:20:16
   |
20 |     pub struct Broken {
   |                ^^^^^^
